@@ -17,16 +17,22 @@
 
 package com.megaease.easeagent.core;
 
-import com.google.common.base.Function;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
 import com.megaease.easeagent.config.*;
-import com.megaease.easeagent.core.utils.JsonUtil;
+import com.megaease.easeagent.core.context.ContextManager;
+import com.megaease.easeagent.core.plugin.BridgeDispatcher;
+import com.megaease.easeagent.core.plugin.PluginLoader;
+import com.megaease.easeagent.plugin.bridge.EaseAgent;
+import com.megaease.easeagent.plugin.utils.common.JsonUtil;
 import com.megaease.easeagent.core.utils.WrappedConfigManager;
 import com.megaease.easeagent.httpserver.AgentHttpHandler;
 import com.megaease.easeagent.httpserver.AgentHttpHandlerProvider;
 import com.megaease.easeagent.httpserver.AgentHttpServer;
+import com.megaease.easeagent.log4j2.Logger;
+import com.megaease.easeagent.log4j2.LoggerFactory;
+import com.megaease.easeagent.plugin.field.DynamicFieldAccessor;
 import com.megaease.easeagent.report.AgentReport;
 import com.megaease.easeagent.report.AgentReportAware;
 import fi.iki.elonen.NanoHTTPD;
@@ -43,8 +49,6 @@ import net.bytebuddy.jar.asm.Opcodes;
 import net.bytebuddy.matcher.ElementMatcher;
 import net.bytebuddy.utility.JavaModule;
 import org.apache.commons.lang3.StringUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import javax.management.MBeanServer;
 import javax.management.ObjectName;
@@ -54,10 +58,13 @@ import java.lang.management.ManagementFactory;
 import java.lang.reflect.Method;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
 import static com.google.common.collect.FluentIterable.from;
 import static net.bytebuddy.matcher.ElementMatchers.*;
 
+@SuppressWarnings("unused")
 public class Bootstrap {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(Bootstrap.class);
@@ -76,6 +83,8 @@ public class Bootstrap {
 
     private static WrappedConfigManager wrappedConfigManager;
 
+    private static ContextManager contextManager;
+
     public static void start(String args, Instrumentation inst, Iterable<Class<?>> providers,
                              Iterable<Class<? extends Transformation>> transformations) throws Exception {
         long begin = System.nanoTime();
@@ -89,6 +98,8 @@ public class Bootstrap {
             LOGGER.debug("Loaded conf:\n{}", display);
         }
         registerMBeans(conf);
+        contextManager = ContextManager.build(conf);
+        EaseAgent.dispatcher = new BridgeDispatcher();
 
         Integer port = conf.getInt(AGENT_SERVER_PORT_KEY);
         if (port == null) {
@@ -106,33 +117,11 @@ public class Bootstrap {
             LOGGER.info("start agent http server on port:{}", port);
         }
         MiddlewareConfigProcessor.INSTANCE.init();
-        long buildBegin = System.currentTimeMillis();
-        AgentBuilder builder = new AgentBuilder.Default()
-//                .with(LISTENER)
-//                .with(new AgentBuilder.Listener.Filtering(
-//                        new StringMatcher("java.lang.Thread", StringMatcher.Mode.EQUALS_FULLY),
-//                        AgentBuilder.Listener.StreamWriting.toSystemOut()))
-                .with(AgentBuilder.RedefinitionStrategy.RETRANSFORMATION)
-                .with(AgentBuilder.InitializationStrategy.NoOp.INSTANCE)
-                .with(AgentBuilder.TypeStrategy.Default.REDEFINE)
-                .with(AgentBuilder.LocationStrategy.ForClassLoader.STRONG.withFallbackTo(ClassFileLocator.ForClassLoader.ofBootLoader()))
-//                .ignore(any(), protectedLoaders()) // we need to redefine java.lang and java.util
-                .ignore(isSynthetic())
-                .or(nameStartsWith("sun."))
-                .or(nameStartsWith("com.sun."))
-                .or(nameStartsWith("brave."))
-                .or(nameStartsWith("zipkin2."))
-                .or(nameStartsWith("com.fasterxml"))
-                .or(nameStartsWith("org.apache.logging"))
-                .or(nameStartsWith("kotlin."))
-                .or(nameStartsWith("javax."))
-                .or(nameStartsWith("net.bytebuddy."))
-                .or(nameStartsWith("com\\.sun\\.proxy\\.\\$Proxy.+"))
-                .or(nameStartsWith("java\\.lang\\.invoke\\.BoundMethodHandle\\$Species_L.+"))
-                .or(nameStartsWith("org.junit."))
-                .or(nameStartsWith("junit."))
-                .or(nameStartsWith("com.intellij."));
-        LOGGER.info("AgentBuilder use time: {}", (System.currentTimeMillis() - buildBegin));
+        com.megaease.easeagent.plugin.api.middleware.MiddlewareConfigProcessor.INSTANCE.init();
+        AgentBuilder builder = getAgentBuilder(conf, false);
+
+        // load plugins
+        builder = PluginLoader.load(builder, conf);
 
         final AgentReport agentReport = AgentReport.create(conf);
         builder = define(transformations, scoped(providers, conf, agentReport), builder, conf, agentReport);
@@ -141,6 +130,42 @@ public class Bootstrap {
         LOGGER.info("installBegin use time: {}", (System.currentTimeMillis() - installBegin));
         agentHttpServer.addHttpRoutes(AGENT_HTTP_HANDLER_LIST_AFTER_PROVIDER);
         LOGGER.info("Initialization has took {}ms", TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - begin));
+    }
+
+    public static AgentBuilder getAgentBuilder(Configs config, boolean test) {
+        long buildBegin = System.currentTimeMillis();
+        AgentBuilder builder = new AgentBuilder.Default()
+            .with(LISTENER)
+            .with(AgentBuilder.RedefinitionStrategy.RETRANSFORMATION)
+            .with(AgentBuilder.InitializationStrategy.NoOp.INSTANCE)
+            .with(AgentBuilder.TypeStrategy.Default.REDEFINE)
+            .with(AgentBuilder.LocationStrategy.ForClassLoader.STRONG
+                .withFallbackTo(ClassFileLocator.ForClassLoader.ofSystemLoader()));
+        AgentBuilder.Ignored ignore = builder.ignore(isSynthetic())
+            .or(nameStartsWith("sun."))
+            .or(nameStartsWith("com.sun."))
+            .or(nameStartsWith("brave."))
+            .or(nameStartsWith("zipkin2."))
+            .or(nameStartsWith("com.fasterxml"))
+            .or(nameStartsWith("org.apache.logging"))
+            .or(nameStartsWith("kotlin."))
+            .or(nameStartsWith("javax."))
+            .or(nameStartsWith("net.bytebuddy."))
+            .or(nameStartsWith("com\\.sun\\.proxy\\.\\$Proxy.+"))
+            .or(nameStartsWith("java\\.lang\\.invoke\\.BoundMethodHandle\\$Species_L.+"))
+            .or(nameStartsWith("org.junit."))
+            .or(nameStartsWith("junit."))
+            .or(nameStartsWith("com.intellij."));
+
+        if (!test) {
+            builder = ignore
+                .or(nameStartsWith("com.megaease.easeagent."));
+        } else {
+            builder = ignore;
+        }
+        LOGGER.info("AgentBuilder use time: {}", (System.currentTimeMillis() - buildBegin));
+
+        return builder;
     }
 
     static void registerMBeans(ConfigManagerMXBean conf) throws Exception {
@@ -154,18 +179,9 @@ public class Bootstrap {
     }
 
     private static Map<Class<?>, Iterable<QualifiedBean>> scoped(Iterable<Class<?>> providers, final Configs conf, final AgentReport agentReport) {
-        return ImmutableMap.copyOf(Maps.transformValues(
-                from(providers).uniqueIndex(new Function<Class<?>, Class<?>>() {
-                    @Override
-                    public Class<?> apply(Class<?> input) {
-                        return input.getSuperclass();
-                    }
-                }), new Function<Class<?>, Iterable<QualifiedBean>>() {
-                    @Override
-                    public Iterable<QualifiedBean> apply(Class<?> input) {
-                        return beans(input, conf, agentReport);
-                    }
-                }));
+        return ImmutableMap.copyOf(
+            Maps.transformValues(from(providers).uniqueIndex(Class::getSuperclass),
+                input -> beans(input, conf, agentReport)));
     }
 
     private static ElementMatcher<ClassLoader> protectedLoaders() {
@@ -177,11 +193,11 @@ public class Bootstrap {
         long begin = System.currentTimeMillis();
         for (Class<? extends Transformation> tc : transformations) {
             final Injection.Provider ann = tc.getAnnotation(Injection.Provider.class);
-            final Iterable<QualifiedBean> beans = ann == null ? Collections.<QualifiedBean>emptySet() : scopedBeans.get(ann.value());
+            final Iterable<QualifiedBean> beans = ann == null ? Collections.emptySet() : scopedBeans.get(ann.value());
             final Register register = new Register(beans);
 
             for (Map.Entry<ElementMatcher<? super TypeDescription>, Iterable<Definition.Transformer>> entry :
-                    newInstance(tc, conf, report).define(Definition.Default.EMPTY).asMap().entrySet()) {
+                newInstance(tc, conf, report).define(Definition.Default.EMPTY).asMap().entrySet()) {
                 ab = ab.type(entry.getKey()).transform(compound(entry.getValue(), register));
             }
             if (LOGGER.isDebugEnabled()) {
@@ -192,14 +208,13 @@ public class Bootstrap {
         return ab;
     }
 
-    private static AgentBuilder.Transformer compound(Iterable<Definition.Transformer> transformers, final Register register) {
-        return new CompoundTransformer(from(transformers).transform(
-                new Function<Definition.Transformer, AgentBuilder.Transformer>() {
-                    @Override
-                    public AgentBuilder.Transformer apply(final Definition.Transformer input) {
-                        return new ForRegisterAdvice(register, input);
-                    }
-                }).toList());
+    private static AgentBuilder.Transformer compound(Iterable<Definition.Transformer> transformers,
+                                                     final Register register) {
+        List<AgentBuilder.Transformer> agentTransformers = StreamSupport.stream(transformers.spliterator(), false)
+            .map(transformation -> new ForRegisterAdvice(register, transformation))
+            .collect(Collectors.toList());
+
+        return new CompoundTransformer(agentTransformers);
     }
 
     private static Iterable<QualifiedBean> beans(Class<?> provider, Configs conf, AgentReport agentReport) {
@@ -221,6 +236,13 @@ public class Bootstrap {
         if (instance instanceof IProvider) {
             ((IProvider) instance).afterPropertiesSet();
         }
+        if (instance instanceof TracingProvider) {
+            TracingProvider tracingProvider = (TracingProvider) instance;
+            contextManager.setTracing(tracingProvider);
+        }
+        if (instance instanceof MetricProvider) {
+            contextManager.setMetric((MetricProvider) instance);
+        }
         return builder.build();
     }
 
@@ -228,7 +250,7 @@ public class Bootstrap {
         final Configurable configurable = aClass.getAnnotation(Configurable.class);
         try {
             final T t = configurable == null ? aClass.newInstance()
-                    : aClass.getConstructor(Config.class).newInstance(conf);
+                : aClass.getConstructor(Config.class).newInstance(conf);
             if (t instanceof ConfigAware) {
                 ((ConfigAware) t).setConfig(conf);
             }
@@ -252,6 +274,8 @@ public class Bootstrap {
         }
         AGENT_HTTP_HANDLER_LIST_ON_INIT.add(new ServiceUpdateAgentHttpHandler());
         AGENT_HTTP_HANDLER_LIST_ON_INIT.add(new CanaryUpdateAgentHttpHandler());
+        AGENT_HTTP_HANDLER_LIST_ON_INIT.add(new PluginPropertyHttpHandler());
+        AGENT_HTTP_HANDLER_LIST_ON_INIT.add(new PluginPropertiesHttpHandler());
         return configs;
     }
 
@@ -268,8 +292,9 @@ public class Bootstrap {
         }
 
         @Override
-        public void processConfig(Map<String, String> config, String version) {
+        public NanoHTTPD.Response processConfig(Map<String, String> config, Map<String, String> urlParams, String version) {
             wrappedConfigManager.updateCanary2(config, version);
+            return null;
         }
     }
 
@@ -280,8 +305,72 @@ public class Bootstrap {
         }
 
         @Override
-        public void processConfig(Map<String, String> config, String version) {
-            wrappedConfigManager.updateService2(config, version);
+        public NanoHTTPD.Response processConfig(Map<String, String> config, Map<String, String> urlParams, String version) {
+            wrappedConfigManager.updateService2(CompatibilityConversion.transform(config), version);
+            return null;
+        }
+    }
+
+    public static class PluginPropertyHttpHandler extends AgentHttpHandler {
+
+        public PluginPropertyHttpHandler() {
+            methods = Collections.singleton(NanoHTTPD.Method.GET);
+        }
+
+        @Override
+        public String getPath() {
+            return "/plugins/domains/:domain/namespaces/:namespace/:id/properties/:property/:value/:version";
+        }
+
+        @SneakyThrows
+        @Override
+        public NanoHTTPD.Response process(RouterNanoHTTPD.UriResource uriResource, Map<String, String> urlParams, NanoHTTPD.IHTTPSession session) {
+            String version = urlParams.get("version");
+            if (version == null) {
+                return NanoHTTPD.newFixedLengthResponse(NanoHTTPD.Response.Status.BAD_REQUEST, AgentHttpServer.JSON_TYPE, null);
+            }
+            try {
+                String property = ConfigUtils.buildPluginProperty(
+                    ConfigUtils.requireNonEmpty(urlParams.get("domain"), "urlParams.domain must not be null and empty."),
+                    ConfigUtils.requireNonEmpty(urlParams.get("namespace"), "urlParams.namespace must not be null and empty."),
+                    ConfigUtils.requireNonEmpty(urlParams.get("id"), "urlParams.id must not be null and empty."),
+                    ConfigUtils.requireNonEmpty(urlParams.get("property"), "urlParams.property must not be null and empty."));
+                String value = Objects.requireNonNull(urlParams.get("value"), "urlParams.value must not be null.");
+                wrappedConfigManager.updateService2(Collections.singletonMap(property, value), version);
+                return NanoHTTPD.newFixedLengthResponse(NanoHTTPD.Response.Status.OK, AgentHttpServer.JSON_TYPE, null);
+            } catch (Exception e) {
+                return NanoHTTPD.newFixedLengthResponse(NanoHTTPD.Response.Status.BAD_REQUEST, AgentHttpServer.JSON_TYPE, e.getMessage());
+            }
+
+        }
+    }
+
+    public static class PluginPropertiesHttpHandler extends ConfigsUpdateAgentHttpHandler {
+        @Override
+        public String getPath() {
+            return "/plugins/domains/:domain/namespaces/:namespace/:id/properties";
+        }
+
+        @Override
+        public NanoHTTPD.Response processConfig(Map<String, String> config, Map<String, String> urlParams, String version) {
+            try {
+                String domain = ConfigUtils.requireNonEmpty(urlParams.get("domain"), "urlParams.domain must not be null and empty.");
+                String namespace = ConfigUtils.requireNonEmpty(urlParams.get("namespace"), "urlParams.namespace must not be null and empty.");
+                String id = ConfigUtils.requireNonEmpty(urlParams.get("id"), "urlParams.id must not be null and empty.");
+                Map<String, String> changeConfig = new HashMap<>();
+                for (Map.Entry<String, String> propertyEntry : config.entrySet()) {
+                    String property = ConfigUtils.buildPluginProperty(domain,
+                        namespace,
+                        id,
+                        ConfigUtils.requireNonEmpty(propertyEntry.getKey(), "body.key must not be null and empty."));
+                    String value = Objects.requireNonNull(propertyEntry.getValue(), String.format("body.%s must not be null.", propertyEntry.getKey()));
+                    changeConfig.put(property, value);
+                }
+                wrappedConfigManager.updateService2(changeConfig, version);
+                return null;
+            } catch (Exception e) {
+                return NanoHTTPD.newFixedLengthResponse(NanoHTTPD.Response.Status.BAD_REQUEST, AgentHttpServer.JSON_TYPE, e.getMessage());
+            }
         }
     }
 
@@ -311,7 +400,7 @@ public class Bootstrap {
 
     public static abstract class ConfigsUpdateAgentHttpHandler extends AgentHttpHandler {
 
-        public abstract void processConfig(Map<String, String> config, String version);
+        public abstract NanoHTTPD.Response processConfig(Map<String, String> config, Map<String, String> urlParams, String version);
 
         @SneakyThrows
         @Override
@@ -329,36 +418,36 @@ public class Bootstrap {
                 return NanoHTTPD.newFixedLengthResponse(NanoHTTPD.Response.Status.BAD_REQUEST, AgentHttpServer.JSON_TYPE, null);
             }
             Map<String, String> config = toConfigMap(map);
-            processConfig(config, version);
+            NanoHTTPD.Response response = processConfig(config, urlParams, version);
+            if (response != null) {
+                return response;
+            }
             return NanoHTTPD.newFixedLengthResponse(NanoHTTPD.Response.Status.OK, AgentHttpServer.JSON_TYPE, null);
         }
     }
 
     private static final AgentBuilder.Listener LISTENER = new AgentBuilder.Listener() {
-
         @Override
         public void onDiscovery(String typeName, ClassLoader classLoader, JavaModule module, boolean loaded) {
-            LOGGER.info("onDiscovery {} from classLoader {}", typeName, classLoader);
         }
 
         @Override
         public void onTransformation(TypeDescription td, ClassLoader ld, JavaModule m, boolean loaded, DynamicType dt) {
-//            LOGGER.info("onTransformation: {} loaded: {} from classLoader {}", td, loaded, ld);
+            LOGGER.debug("onTransformation: {} loaded: {} from classLoader {}", td, loaded, ld);
         }
 
         @Override
         public void onIgnored(TypeDescription td, ClassLoader ld, JavaModule m, boolean loaded) {
-//            LOGGER.info("onIgnored: {} loaded: {} from classLoader {}", td, loaded, ld);
         }
 
         @Override
         public void onError(String name, ClassLoader ld, JavaModule m, boolean loaded, Throwable error) {
-//            LOGGER.warn("onError: {} error:{} loaded: {} from classLoader {}", name, error, loaded, ld);
+            LOGGER.debug("Just for Debug-log, transform ends exceptionally, which is sometimes normal and sometimes there is an error: {} error:{} loaded: {} from classLoader {}", name, error, loaded, ld);
+            // LOGGER.debug("Just for Debug-log, transform ends exceptionally, which is sometimes normal and sometimes there is an error,:", error);
         }
 
         @Override
         public void onComplete(String name, ClassLoader ld, JavaModule m, boolean loaded) {
-//            LOGGER.info("onComplete: {} loaded: {} from classLoader {}", name, loaded, ld);
         }
     };
 
@@ -373,7 +462,7 @@ public class Bootstrap {
             this.agentTransformer = transformer;
             this.adviceFactoryClassName = transformer.adviceFactoryClassName;
             this.transformer = new ForAdvice().include(getClass().getClassLoader())
-                    .advice(transformer.matcher, transformer.inlineAdviceClassName);
+                .advice(transformer.matcher, transformer.inlineAdviceClassName);
 
         }
 
@@ -383,7 +472,7 @@ public class Bootstrap {
             if (!td.isAssignableTo(DynamicFieldAccessor.class)) {
                 if (this.agentTransformer.fieldName != null) {
                     b = b.defineField(this.agentTransformer.fieldName, this.agentTransformer.fieldClass, Opcodes.ACC_PRIVATE)
-                            .implement(DynamicFieldAccessor.class).intercept(FieldAccessor.ofField(this.agentTransformer.fieldName));
+                        .implement(DynamicFieldAccessor.class).intercept(FieldAccessor.ofField(this.agentTransformer.fieldName));
                 }
             }
             return transformer.transform(b, td, cl, m);
